# agentic-devtools

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  PR_INSTRUCTIONS.md  README.md  RELEASING.md  SECURITY_SCANNING.md  SOLUTION_SUMMARY.md  SPEC_DRIVEN_DEVELOPMENT.md  ayaiay.json  migrate_tests.py  pyproject.toml
.agdt-temp/: agdt-state.json
.agdt-temp/background-tasks/: all-background-tasks.json
.devcontainer/: README.md  devcontainer.json
.dfly-temp/: dfly-state.json
.dfly-temp/background-tasks/: all-background-tasks.json
.github/: MARKDOWN_LINTING.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: speckit-test.md
.github/agents/: .markdownlint.json  agdt.apply-pr-suggestions.initiate.agent.md  agdt.create-jira-epic.initiate.agent.md  agdt.create-jira-issue.initiate.agent.md  agdt.create-jira-subtask.initiate.agent.md  agdt.pull-request-review.completion.agent.md  agdt.pull-request-review.decision.agent.md  agdt.pull-request-review.file-review.agent.md  agdt.pull-request-review.initiate.agent.md  agdt.pull-request-review.summary.agent.md  agdt.update-jira-issue.initiate.agent.md  agdt.work-on-jira-issue.checklist-creation.agent.md  agdt.work-on-jira-issue.commit.agent.md  agdt.work-on-jira-issue.completion.agent.md  agdt.work-on-jira-issue.implementation-review.agent.md  agdt.work-on-jira-issue.implementation.agent.md  agdt.work-on-jira-issue.initiate.agent.md  agdt.work-on-jira-issue.planning.agent.md  agdt.work-on-jira-issue.pull-request.agent.md  agdt.work-on-jira-issue.retrieve.agent.md  agdt.work-on-jira-issue.setup.agent.md  agdt.work-on-jira-issue.verification.agent.md  copilot-instructions.md  security-scan.agent.md  senior-python-developer.md
.github/prompts/: .markdownlint.json  agdt.apply-pr-suggestions.initiate.prompt.md  agdt.create-jira-epic.initiate.prompt.md  agdt.create-jira-issue.initiate.prompt.md  agdt.create-jira-subtask.initiate.prompt.md  agdt.pull-request-review.completion.prompt.md  agdt.pull-request-review.decision.prompt.md  agdt.pull-request-review.file-review.prompt.md  agdt.pull-request-review.initiate.prompt.md  agdt.pull-request-review.summary.prompt.md  agdt.update-jira-issue.initiate.prompt.md  agdt.work-on-jira-issue.checklist-creation.prompt.md  agdt.work-on-jira-issue.commit.prompt.md  agdt.work-on-jira-issue.completion.prompt.md  agdt.work-on-jira-issue.implementation-review.prompt.md  agdt.work-on-jira-issue.implementation.prompt.md  agdt.work-on-jira-issue.initiate.prompt.md  agdt.work-on-jira-issue.planning.prompt.md  agdt.work-on-jira-issue.pull-request.prompt.md  agdt.work-on-jira-issue.retrieve.prompt.md  agdt.work-on-jira-issue.setup.prompt.md  agdt.work-on-jira-issue.verification.prompt.md
.github/workflows/: README.md  auto-fix-on-failure.yml  copilot-review-gate.yml  copilot-setup-steps.yml  lint.yml  publish.yml  release.yml  security-scan-on-merge.yml  speckit-issue-trigger.yml  test.yml  workflow-tests.yml
.specify/: SDD_QUICK_REFERENCE.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
agdt_ai_helpers/: __init__.py
agentic_devtools/: __init__.py  _version.py  background_tasks.py  config.py  dispatcher.py  file_locking.py  state.py  task_state.py
agentic_devtools/cli/: __init__.py  cert_utils.py  runner.py  state.py  subprocess_utils.py  testing.py
agentic_devtools/prompts/: __init__.py  loader.py
dfly_ai_helpers/: __init__.py
docs/: 01-introduction-and-goals.md  02-architecture-constraints.md  03-system-context.md  04-solution-strategy.md  05-building-blocks.md  06-runtime-view.md  07-deployment-view.md  08-cross-cutting-concepts.md  09-architecture-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md  README.md  copilot-commands.md
pull_request_comments/: 684
pulls/684/: comments
scripts/: migrate_azure_devops_full.py  migrate_azure_devops_tests.py  run-pr-checks.sh  scaffold_tests.py  validate_test_structure.py  verify-agent-coverage.py
specs/: README.md
specs/001-add-workflow-step-agents/: plan.md  spec.md  tasks.md
specs/001-example-feature/: spec.md
specs/001-pypi-wheel-release/: plan.md  spec.md  tasks.md
specs/001-separate-docs/: plan.md  spec.md  tasks.md
specs/001-workflow-step-skills/: spec.md
specs/002-github-action-speckit-trigger/: plan.md  spec.md  tasks.md  workflow-sequence-diagram.md
specs/003-comprehensive-e2e-smoke-tests/: spec.md
specs/003-e2e-smoke-tests-cli/: plan.md
tests/: README.md  __init__.py  conftest.py  helpers.py  test_background_tasks.py  test_checklist.py  test_checklist_commands.py  test_cli_state.py  test_dispatcher.py  test_file_locking.py  test_file_locking_platform.py  test_file_review_commands.py  test_file_review_queue_management.py  test_git_async.py  test_git_commands.py  test_git_core.py  test_git_diff.py  test_git_operations.py  test_git_utilities.py  test_jira_adf.py  test_jira_async.py  test_jira_commands.py  test_jira_config.py  test_jira_formatting.py  test_jira_helpers.py  test_jira_state.py  test_jira_update_commands.py  test_parse_error_report.py  test_preflight.py  test_prompt_loader.py  test_release_commands.py  test_release_helpers.py  test_release_integration.py  test_review_jira.py  test_review_prompts.py  test_role_commands.py  test_scaffold_tests.py  test_state.py  test_subprocess_utils.py  test_task_state.py  (+10 more)
tests/azure_context/: __init__.py  test_commands.py  test_config.py  test_management.py
tests/azure_devops/: __init__.py  conftest.py  test_async_commands.py  test_auth.py  test_commands_api.py  test_commands_dry_run.py  test_config.py  test_file_review_commands.py  test_helpers.py  test_mark_reviewed.py  test_pipeline_commands.py  test_pr_summary_commands.py  test_pull_request_details_commands.py  test_review_commands.py  test_run_details_commands.py  test_vpn_toggle.py
tests/cli/: test_azure_app_insights_commands.py  test_azure_auth.py  test_azure_config.py  test_runner.py
tests/e2e_smoke/: README.md  (+5 more)
(+894 files in other folders)
