[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agentic-devtools"
dynamic = ["version"]
description = "AI assistant helper commands for the Dragonfly platform"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Dragonfly Team" }
]
dependencies = [
    "requests>=2.28.0",
    "Jinja2>=3.0.0",
    "build>=1.2.2",
    "twine>=5.0.0",
    "azure-monitor-query>=1.0.0",
    "azure-identity>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "vcrpy>=6.0.0",
    "pytest-recording>=0.13.0",
]

[project.scripts]
# All entry points route through runner.run_as_script, which derives the
# command name from sys.argv[0] and handles KeyboardInterrupt gracefully.
agdt-set = "agentic_devtools.cli.runner:run_as_script"
agdt-get = "agentic_devtools.cli.runner:run_as_script"
agdt-delete = "agentic_devtools.cli.runner:run_as_script"
agdt-clear = "agentic_devtools.cli.runner:run_as_script"
agdt-show = "agentic_devtools.cli.runner:run_as_script"
agdt-add-pull-request-comment = "agentic_devtools.cli.runner:run_as_script"
agdt-approve-pull-request = "agentic_devtools.cli.runner:run_as_script"
agdt-create-pull-request = "agentic_devtools.cli.runner:run_as_script"
agdt-get-pull-request-threads = "agentic_devtools.cli.runner:run_as_script"
agdt-reply-to-pull-request-thread = "agentic_devtools.cli.runner:run_as_script"
agdt-resolve-thread = "agentic_devtools.cli.runner:run_as_script"
agdt-mark-pull-request-draft = "agentic_devtools.cli.runner:run_as_script"
agdt-publish-pull-request = "agentic_devtools.cli.runner:run_as_script"
agdt-run-e2e-tests-synapse = "agentic_devtools.cli.runner:run_as_script"
agdt-run-e2e-tests-fabric = "agentic_devtools.cli.runner:run_as_script"
agdt-run-wb-patch = "agentic_devtools.cli.runner:run_as_script"
agdt-get-run-details = "agentic_devtools.cli.runner:run_as_script"
agdt-wait-for-run = "agentic_devtools.cli.runner:run_as_script"
agdt-list-pipelines = "agentic_devtools.cli.runner:run_as_script"
agdt-get-pipeline-id = "agentic_devtools.cli.runner:run_as_script"
agdt-create-pipeline = "agentic_devtools.cli.runner:run_as_script"
agdt-update-pipeline = "agentic_devtools.cli.runner:run_as_script"
agdt-get-pull-request-details = "agentic_devtools.cli.runner:run_as_script"
agdt-approve-file = "agentic_devtools.cli.runner:run_as_script"
agdt-submit-file-review = "agentic_devtools.cli.runner:run_as_script"
agdt-request-changes = "agentic_devtools.cli.runner:run_as_script"
agdt-request-changes-with-suggestion = "agentic_devtools.cli.runner:run_as_script"
agdt-mark-file-reviewed = "agentic_devtools.cli.runner:run_as_script"
agdt-generate-pr-summary = "agentic_devtools.cli.runner:run_as_script"
agdt-create-epic = "agentic_devtools.cli.runner:run_as_script"
agdt-create-issue = "agentic_devtools.cli.runner:run_as_script"
agdt-create-subtask = "agentic_devtools.cli.runner:run_as_script"
agdt-add-jira-comment = "agentic_devtools.cli.runner:run_as_script"
agdt-get-jira-issue = "agentic_devtools.cli.runner:run_as_script"
agdt-update-jira-issue = "agentic_devtools.cli.runner:run_as_script"
agdt-list-project-roles = "agentic_devtools.cli.runner:run_as_script"
agdt-get-project-role-details = "agentic_devtools.cli.runner:run_as_script"
agdt-add-users-to-project-role = "agentic_devtools.cli.runner:run_as_script"
agdt-add-users-to-project-role-batch = "agentic_devtools.cli.runner:run_as_script"
agdt-find-role-id-by-name = "agentic_devtools.cli.runner:run_as_script"
agdt-check-user-exists = "agentic_devtools.cli.runner:run_as_script"
agdt-check-users-exist = "agentic_devtools.cli.runner:run_as_script"
agdt-parse-jira-error-report = "agentic_devtools.cli.runner:run_as_script"
agdt-git-save-work = "agentic_devtools.cli.runner:run_as_script"
agdt-git-sync = "agentic_devtools.cli.runner:run_as_script"
agdt-git-stage = "agentic_devtools.cli.runner:run_as_script"
agdt-git-push = "agentic_devtools.cli.runner:run_as_script"
agdt-git-force-push = "agentic_devtools.cli.runner:run_as_script"
agdt-git-publish = "agentic_devtools.cli.runner:run_as_script"
agdt-test = "agentic_devtools.cli.runner:run_as_script"
agdt-test-quick = "agentic_devtools.cli.runner:run_as_script"
agdt-test-file = "agentic_devtools.cli.runner:run_as_script"
agdt-test-pattern = "agentic_devtools.cli.runner:run_as_script"
agdt-release-pypi = "agentic_devtools.cli.runner:run_as_script"
agdt-query-app-insights = "agentic_devtools.cli.runner:run_as_script"
agdt-query-fabric-dap-errors = "agentic_devtools.cli.runner:run_as_script"
agdt-query-fabric-dap-provisioning = "agentic_devtools.cli.runner:run_as_script"
agdt-query-fabric-dap-timeline = "agentic_devtools.cli.runner:run_as_script"
agdt-tasks = "agentic_devtools.cli.runner:run_as_script"
agdt-task-status = "agentic_devtools.cli.runner:run_as_script"
agdt-task-log = "agentic_devtools.cli.runner:run_as_script"
agdt-task-wait = "agentic_devtools.cli.runner:run_as_script"
agdt-tasks-clean = "agentic_devtools.cli.runner:run_as_script"
agdt-show-other-incomplete-tasks = "agentic_devtools.cli.runner:run_as_script"
agdt-get-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-clear-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-initiate-pull-request-review-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-initiate-work-on-jira-issue-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-initiate-create-jira-issue-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-initiate-create-jira-epic-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-initiate-create-jira-subtask-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-initiate-update-jira-issue-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-initiate-apply-pr-suggestions-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-vpn-on = "agentic_devtools.cli.runner:run_as_script"
agdt-vpn-off = "agentic_devtools.cli.runner:run_as_script"
agdt-vpn-status = "agentic_devtools.cli.runner:run_as_script"
agdt-azure-context-use = "agentic_devtools.cli.runner:run_as_script"
agdt-azure-context-status = "agentic_devtools.cli.runner:run_as_script"
agdt-azure-context-current = "agentic_devtools.cli.runner:run_as_script"
agdt-azure-context-ensure-login = "agentic_devtools.cli.runner:run_as_script"
agdt-network-status = "agentic_devtools.cli.runner:run_as_script"
agdt-vpn-run = "agentic_devtools.cli.runner:run_as_script"
agdt-setup-worktree-background = "agentic_devtools.cli.runner:run_as_script"
agdt-advance-workflow = "agentic_devtools.cli.runner:run_as_script"
agdt-get-next-workflow-prompt = "agentic_devtools.cli.runner:run_as_script"
agdt-create-checklist = "agentic_devtools.cli.runner:run_as_script"
agdt-update-checklist = "agentic_devtools.cli.runner:run_as_script"
agdt-show-checklist = "agentic_devtools.cli.runner:run_as_script"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "agentic_devtools/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["agentic_devtools", "agdt_ai_helpers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=agentic_devtools --cov-report=term-missing --cov-fail-under=90"
markers = [
    "windows_only: mark test to run only on Windows (msvcrt file locking)",
    "linux_only: mark test to run only on Linux/Unix (fcntl file locking)",
    "e2e: mark test as end-to-end smoke test",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes (unused imports F401, unused variables F841, etc.)
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize syntax)
]

[tool.ruff.lint.isort]
known-first-party = ["agentic_devtools", "agdt_ai_helpers"]

[tool.coverage.run]
source = ["agentic_devtools"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
